if(NOT OPEN_FOR_IDE)
  # flow bindings currently doesn't support that
  add_subdirectory(c)
  add_subdirectory(flow)
endif()
if(WITH_PYTHON_BINDING)
  add_subdirectory(python)
endif()
if(WITH_JAVA_BINDING)
  add_subdirectory(java)
endif()
if(WITH_GO_BINDING AND NOT OPEN_FOR_IDE)
  add_subdirectory(go)
endif()
if(WITH_RUBY_BINDING)
  add_subdirectory(ruby)
endif()
if(NOT WIN32 AND NOT OPEN_FOR_IDE)
  package_bindingtester()
endif()
